# d2rhelper

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/Chat/: ChatInput.tsx  ChatPanel.tsx  ChatSidebar.tsx  ItemTooltip.tsx  MessageList.tsx  contextBuilder.ts  useChatConnection.ts
frontend/src/components/Dashboard/: CharacterInfo.tsx  Dashboard.tsx  EquipmentGrid.tsx  ItemTable.tsx  QuestsPanel.tsx  SkillsPanel.tsx  (+2 more)
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
scripts/: build_casclib.bat  build_casclib.sh  extract_txt.py  poc_skill_damage.py  setup.bat  setup.sh
src/d2rhelper/: __init__.py  api.py  bit_reader.py  casc.py  chat.py  chat_store.py  cli.py  db.py  game_data.py  item_parser.py  item_properties.py  item_recovery.py  item_rules.py  libcasc.so.1  llm_context.py  models.py  parser.py  shared_stash_parser.py  tools.py  ui.py
src/d2rhelper/data/: system_prompt.md
src/d2rhelper/services/: __init__.py  chat_ws.py  game_data_provider.py  game_lookup.py  item_lookup.py  parse.py  search.py  sets.py  skill_damage.py
tests/: test_api.py  test_bit_reader.py  test_casc_paths.py  test_character_parser.py  test_db_snapshot.py  test_game_data.py  test_game_lookup.py  test_item_parser.py  test_llm_context.py  test_shared_stash_parser.py  test_skill_damage.py  test_tools.py  test_ui.py
tests/resources/: Farming.d2s  ModernSharedStashSoftCoreV2.d2i
(+8 files in other folders)
